# esp-rs-nix

./: .gitignore  LICENSE  README.md  flake.nix  package.nix  riscv32-gcc.nix  rust.nix  shell.nix  xtensa-gcc.nix
.github/workflows/: build.yml  test-nix-develop.yml  test-nix-shell.yml  test-qemu-esp32c3.yml  test-qemu-esp32s3.yml
esp-rs/: default.nix  esp-gcc.nix  esp-gdb.nix  esp-openocd.nix  package.nix  result  riscv32-gcc.nix  riscv32-gdb.nix  rust-build.nix  rust-src.nix  rust.nix  versions.nix  xtensa-gcc.nix  xtensa-gdb.nix
esp-rs/legacy/: default.nix  riscv32-gcc.nix
qemu-test/: .gitignore  Cargo.toml  env.toml  just.toml  justfile  rust-toolchain.toml  shell.nix
qemu-test/.cargo/: config.toml
qemu-test/src/: main.rs
utils/: fetch-binutils-versions.sh  fetch-crosstool-versions.sh  fetch-rustbuild-versions.sh  fetch-rustsrc-versions.sh
